src/test/run-pass/assert-eq-trailing-comma.rs
fn main() {
    assert_eq!(1, 1,);
}
