src/test/compile-fail/extenv-no-args.rs
// error-pattern: env! takes between 1 and 1 arguments

fn main() { env!(); }
